--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.9",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
+    "env-cmd": "^10.1.0",
     "express": "^5.1.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
