處理 頁面 404 問題

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(?!.*\\.(?:js|css|png|jpg|svg|ico|json)$).*",  
-      "destination": "/"          
+      "src": "/(.*)",       
+      "dest": "/index.html" 
     }
   ]
 }
