--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,12 @@
 
   "rewrites": [
     { "source": "/api/(.*)", "destination": "http://43.199.27.51/api/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/(.*)", "destination": "/index.html" },
+     { "source": "/images/:path*", "destination": "http://43.199.27.51/images/:path*" }
+  ],
+
+    "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
