--- a/vercel.json
+++ b/vercel.json
@@ -17,12 +17,11 @@
   ],
 
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "http://43.199.27.51/api/$1" },
-    { "source": "/(.*)", "destination": "/index.html" },
-     { "source": "/images/:path*", "destination": "http://43.199.27.51/images/:path*" }
+    { "source": "/images/:path*", "destination": "http://43.199.27.51/images/:path*" },
+    { "source": "/api/:path*",    "destination": "http://43.199.27.51/api/:path*" }
   ],
 
-    "routes": [
+  "routes": [
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
