# 處理正式環境圖片讀取問題 v.5

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "vercel-build": "vite build",
     "mock": "node mock/mock-server.js"
   },
+  "engines": { "node": ">=18" },
+
   "dependencies": {
     "@vueuse/core": "^13.1.0",
     "axios": "^1.8.4",
