--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,26 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
+  ],
+
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, proxy-revalidate" },
+        { "key": "CDN-Cache-Control", "value": "no-store" },
+        { "key": "Pragma", "value": "no-cache" },
+        { "key": "Expires", "value": "0" }
+      ]
+    }
+  ],
+
   "rewrites": [
     { "source": "/images/:path*", "destination": "http://43.199.27.51/images/:path*" },
     { "source": "/api/:path*",    "destination": "http://43.199.27.51/api/:path*" }
   ],
+
   "routes": [
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
