--- a/vercel.json
+++ b/vercel.json
@@ -17,12 +17,7 @@
   ],
 
   "rewrites": [
-    { "source": "/images/:path*", "destination": "http://43.199.27.51/images/:path*" },
-    { "source": "/api/:path*",    "destination": "http://43.199.27.51/api/:path*" }
-  ],
-
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "source": "/api/(.*)", "destination": "http://43.199.27.51/api/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
