--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,7 @@
   ],
 
   "rewrites": [
+    { "source": "/api/img/:path*", "destination": "/api/img/:path*" },
     { "source": "/api/(.*)", "destination": "http://43.199.27.51/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
